Version 3.0-1

 o Added a warning to the documentation for effect for using predictors of class "dates" or "times".

 o Fixed bug in Effect.gls() when var or cor function depends on variables in the data set (reported by Felipe Albornoz).

 o Small fixes/improvements.

Version 3.0-0

 o Added partial residuals for multidimensional component+residual plots to Effect.lm().

 o Small bug fixes.

Version 2.3-0

 o removed stray character in a the mixed models file
 
 o ci.style="bands" is now the default for variates on the horizontal axis and can also be used with multiline=TRUE
  
 o Added ci.style='bands', band.transparency, band.colors, and lwd to plot.effpoly() for line plots to give filled confidence bands and control line width

 o Added Effect.mlm() for multivariate linear models
 
 o Interpolating splines are now used by default when drawing lines in effects plots unless the argument use.splines=FALSE
 
 o effect() now calls Effect(); all effect() methods are removed, but effect() will continue to work as before.

 o Various methods for effect objects now handle factors with a "valid" NA level (fixing bug reported by Joseph Larmarange).

 o Further bug fixes in effects.mer() and effects.lme() (following bug report by Felipe E. Albornoz).

Version 2.2-6

 o bug fixes in effects.mer and effects.lme.

 o added terms.gls() to make effect.gls() and Effect.gls() work again.

 o plot.eff() gains an lwd= option to control the width of fitted lines.
 
 o Added ci.style='bands' and alpha= to plot.eff() for non-multiline plots to give filled confidence bands.

Version 2.2-5

 o Added support for polytomous latent class analysis based on the poLCA package.
 
 o Modified mixed-model methods to all use in user-functions.

 o Changed the default method for determining number of levels for a continuous predictor; see help page for 'effect' and discussion of the 'xlevels' argument for details.  Argument 'default.levels', while still included for compatibility, is depricated.